<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="24.0dip" android:paddingTop="36.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="24.0sp" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="Login with your MyAnimeList account" />
        <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:hint="Username (not your email)" style="@style/AnYmeOutlinedBox">
            <EditText android:id="@id/inputUsername" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:hint="Password (optional)" style="@style/AnYmeOutlinedBox">
            <EditText android:id="@id/inputPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton android:id="@id/loginButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="24.0dip" android:text="Login" style="@style/AnYmeButton" />
        <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/setupForgotPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="14.0dip" android:text="@string/forgot_your_password" />
        <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/isThisSafe" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="14.0dip" android:text="@string/is_this_safe" />
        <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/policy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="14.0dip" android:text="@string/privacy_policy" />
    </LinearLayout>
</ScrollView>